# fixmydownloads

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  build.sh  buildArtifacts.sh  buildCodeCov.sh  buildDocker.sh  buildDockerRelease.sh  buildRelease.sh  clean.sh  codecov.yml  docker-entrypoint.sh
.github/workflows/: build.yml  build_actions.yml
scripts/: docker-entrypoint.sh  post-install.sh  postinst  systemd-install.sh
services/: fixmydownloads.service
src/: CMakeLists.txt  main.c
tests/: CMakeLists.txt
